--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -13,6 +13,7 @@ body {
 // Home page css
 
 .navbar {
+ 
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -23,9 +24,13 @@ body {
   }
   h1 {
     margin-left: 80px;
-    span {
+    a{
+      color: #000;
+    }
+    span  {
       color: #ff8f52;
     }
+  
   }
 }
 .icons {
