--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,4 +1,4 @@
-.register {
+.login {
   margin-top: 3%;
   max-width: 900px;
   width: 100%;
@@ -10,32 +10,27 @@
   align-items: center;
   box-shadow: 1px 3px 10px #e9ecef;
   background-color: white;
-  span {
-    color: #adb5bd;
-    flex-direction: row;
-  }
-  .col-1 {
-    margin: auto;
-    padding: 3em 0;
-    
-  }
-  .col-2 {
+  .col-3 {
     width: 300px;
     img {
       width: 100%;
     }
   }
-}
-form {
-  max-width: 320px;
-  width: 100vw;
-  margin: 2em auto;
-  .input{
-    padding: 15px;
-    border: 2px solid gainsboro;
-    width: 100%;
+  .login_form{
+    max-width: 320px;
+    width: 100vw;
+    margin: 2em auto;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    
+    .lg_input{
+      padding: 15px;
+      border: 2px solid gainsboro;
+      width: 100%;
+    }
   }
-  .btn {
+  .lg_btn{
     background-color: #FF8F52;
     color: white;
     font-size: 20px;
@@ -44,15 +39,4 @@ form {
     padding: 12px;
     width: 100%;
   }
-  .text{
-    span{
-      color: #FF8F52;
-      list-style-type: none;
-    }
-  }
-}
-.flex {
-  display: flex;
-  gap: 10px;
-  flex-direction: column;
 }
